// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination スナップショット 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    <div
      class="css-1k9efnl"
    >
      <button
        aria-label="first"
        class="chakra-button css-mudq2d"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-129ongp"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill-rule="evenodd"
          />
          <path
            d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="prev"
        class="chakra-button css-mudq2d"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="number-1"
        class="chakra-button css-1ol6zar"
        type="button"
      >
        1
      </button>
      <button
        aria-label="number-2"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        2
      </button>
      <button
        aria-label="number-3"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        3
      </button>
      <button
        aria-label="number-4"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        4
      </button>
      <button
        aria-label="number-5"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        5
      </button>
      <svg
        class="chakra-icon css-u3gylf"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <path
          d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
          fill="currentColor"
        />
      </svg>
      <button
        aria-label="next"
        class="chakra-button css-mudq2d"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="last"
        class="chakra-button css-mudq2d"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-u3gylf"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"
            fill-rule="evenodd"
          />
          <path
            d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <p
      class="chakra-text css-vchh5a"
    >
      1,000件中 1 - 100件目を表示中
    </p>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`Pagination スナップショット/5ページ以下 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    <div
      class="css-1k9efnl"
    >
      <button
        aria-label="first"
        class="chakra-button css-mudq2d"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-129ongp"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill-rule="evenodd"
          />
          <path
            d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="prev"
        class="chakra-button css-mudq2d"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="number-1"
        class="chakra-button css-1ol6zar"
        type="button"
      >
        1
      </button>
      <button
        aria-label="number-2"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        2
      </button>
      <button
        aria-label="number-3"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        3
      </button>
      <button
        aria-label="next"
        class="chakra-button css-mudq2d"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="last"
        class="chakra-button css-mudq2d"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-u3gylf"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"
            fill-rule="evenodd"
          />
          <path
            d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <p
      class="chakra-text css-vchh5a"
    >
      300件中 1 - 100件目を表示中
    </p>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`Pagination スナップショット/最終3ページ以内 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    <div
      class="css-1k9efnl"
    >
      <button
        aria-label="first"
        class="chakra-button css-mudq2d"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-u3gylf"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill-rule="evenodd"
          />
          <path
            d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="prev"
        class="chakra-button css-mudq2d"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill="currentColor"
          />
        </svg>
      </button>
      <svg
        class="chakra-icon css-u3gylf"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <path
          d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
          fill="currentColor"
        />
      </svg>
      <button
        aria-label="number-6"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        6
      </button>
      <button
        aria-label="number-7"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        7
      </button>
      <button
        aria-label="number-8"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        8
      </button>
      <button
        aria-label="number-9"
        class="chakra-button css-1ol6zar"
        type="button"
      >
        9
      </button>
      <button
        aria-label="number-10"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        10
      </button>
      <button
        aria-label="next"
        class="chakra-button css-mudq2d"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="last"
        class="chakra-button css-mudq2d"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-u3gylf"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"
            fill-rule="evenodd"
          />
          <path
            d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <p
      class="chakra-text css-vchh5a"
    >
      1,000件中 801 - 900件目を表示中
    </p>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`Pagination スナップショット/最終ページが100件以下 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    <div
      class="css-1k9efnl"
    >
      <button
        aria-label="first"
        class="chakra-button css-mudq2d"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-u3gylf"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill-rule="evenodd"
          />
          <path
            d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="prev"
        class="chakra-button css-mudq2d"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"
            fill="currentColor"
          />
        </svg>
      </button>
      <svg
        class="chakra-icon css-u3gylf"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <path
          d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
          fill="currentColor"
        />
      </svg>
      <button
        aria-label="number-6"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        6
      </button>
      <button
        aria-label="number-7"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        7
      </button>
      <button
        aria-label="number-8"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        8
      </button>
      <button
        aria-label="number-9"
        class="chakra-button css-1dkcmnq"
        type="button"
      >
        9
      </button>
      <button
        aria-label="number-10"
        class="chakra-button css-1ol6zar"
        type="button"
      >
        10
      </button>
      <button
        aria-label="next"
        class="chakra-button css-mudq2d"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="last"
        class="chakra-button css-mudq2d"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-129ongp"
          focusable="false"
          viewBox="0 0 16 16"
        >
          <path
            d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"
            fill-rule="evenodd"
          />
          <path
            d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <p
      class="chakra-text css-vchh5a"
    >
      999件中 901 - 999件目を表示中
    </p>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
